add auth feature

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ DATABASE_URL="localhost:27017"
 PORT=3001
 BASE_URL="localhost"
 TELEGRAM_BOT_BASE_URL="https://api.telegram.org/bot"
+JWT_SECRET="jwtsecret"
+JWT_EXPIRES_IN="1d"
