--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "@prisma/client": "^4.2.1",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "bson": "^4.7.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "mongoose": "^6.5.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
