--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="localhost:27017"
+DATABASE_URL="mongodb://localhost:27017/microservices"
 PORT=3001
 BASE_URL="localhost"
 TELEGRAM_BOT_BASE_URL="https://api.telegram.org/bot"
